United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7131259 compile_method and CompilationPolicy::event shouldn't be declared TRAPS
7131259 : compile_method and CompilationPolicy::event shouldn't be declared TRAPS

Details
Type:
Bug
Submit Date:
2012-01-18
Status:
Closed
Updated Date:
2012-03-24
Project Name:
JDK
Resolved Date:
2012-03-24
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
In this particular case we're throwing an OOM while inside the counter
overflow on entry to a method.  The exception appears to propagate up
from compile_method, presumably from the resolve_string_constants and
load_signature_classes calls.  compile_method_base is also declared
TRAPS though it can't actually throw an exception.  I think the whole
path from CompilationPolicy::event to compile_method_base should be
cleaned up so that exceptions can't propagate.  Any exception thrown
in the path are side effects and not exception that should even be
propagated to the regular Java code.  I'll file a separate bug for
this.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/20334ed5ed3c
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/20334ed5ed3c
                                     
2012-01-26



Hardware and Software, Engineered to Work Together