7131259: compile_method and CompilationPolicy::event shouldn't be declared TRAPS

Make sure that CompilationPolicy::event() doesn't throw exceptions

Reviewed-by: kvn, never